# PRO22_0123_DAKAR

./: README.md
truck_model/Model/lidar_simulator/: .md
truck_model/Model/lidar_simulator/lidar_simulator/: CHANGELOG.rst  package.xml
truck_model/Model/lidar_simulator/ouster_description/: CMakeLists.txt  package.xml
truck_model/Model/lidar_simulator/ouster_description/launch/: example.launch
truck_model/Model/lidar_simulator/ouster_description/rviz/: example.rviz
truck_model/Model/lidar_simulator/ouster_description/urdf/: Ouster_SO1.urdf.xacro  example.urdf.xacro
truck_model/Model/lidar_simulator/ouster_description/world/: example.world
truck_model/Model/lidar_simulator/robosense_description/: CHANGELOG.rst  package.xml
truck_model/Model/lidar_simulator/robosense_description/launch/: example.launch
truck_model/Model/lidar_simulator/robosense_description/meshes/: RS_Bpearl.dae  RS_Ruby.dae
truck_model/Model/lidar_simulator/robosense_description/urdf/: RS_Bpearl.urdf.xacro  RS_Ruby.urdf.xacro  example.urdf.xacro
truck_model/Model/truck_description/: CMakeLists.txt  package.xml
truck_model/Model/truck_description/launch/: description.launch  truck_description_real.launch
truck_model/Model/truck_description/urdf/: accessories.urdf.xacro  truck.gazebo  truck.urdf.xacro  truck_real.urdf
truck_model/Model/truck_description/urdf/accessories/: camera_mount.urdf.xacro  gps_mount.urdf.xacro  (+2 more)
truck_model/Model/truck_simulator/truck_gazebo/: CMakeLists.txt  package.xml
truck_model/Model/truck_simulator/truck_gazebo_control/: CMakeLists.txt  package.xml
(+65 files in other folders)
