<?xml version="1.0"?>
<package format="2">
  <name>ouster_description</name>
  <version>1.0.12</version>
  <description>
    URDF and meshes describing Ouster laser scanners.
  </description>

  <license>BSD</license>
  <author>Carmen Paniagua</author>
  <maintainer email="cpaniagua@itainnova.es">Carmen Paniagua</maintainer>
  <url type="website">http://wiki.ros.org/velodyne_simulator</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/velodyne_simulator</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/velodyne_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
